--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -63,9 +63,11 @@ It is acceptable for performance to gradually decrease as the multipath channel 
 
 This document explores ways we can improve the existing OFDM modem waveforms in order to meet these requirements.
 
-\section{Modem Performance Model}
+\section{Modem and Channel Models}
 
-In this section we will develop a theoretical model to help us explore performance limits.  For practical PTT voice systems algorithmic delay is limited to a few 100ms, which limits the FEC codeword size and hence the performance of the code.  For PSK channels a threshold $E_b/N_0=2 \, \si{dB}$ and a code rate $R=0.5$ is typical, where $E_b/N_0$ is the energy per payload data bit (coded $E_b/N_0$).  The lowest (threshold) SNR for a viable voice link is given by:
+In this section we will develop theoretical models to help us explore performance limits.
+
+For practical PTT voice systems algorithmic delay is limited to a few 100ms, which limits the FEC codeword size and hence the performance of the code.  For PSK channels a threshold $E_b/N_0=2 \, \si{dB}$ and a code rate $R=0.5$ is typical, where $E_b/N_0$ is the energy per payload data bit (coded $E_b/N_0$).  The lowest (threshold) SNR for a viable voice link is given by:
 \begin{equation}
 \label{eq:snr}
 \begin{split}
@@ -153,21 +155,28 @@ SNR         &= 10log10 \left( \frac{E_sR_s}{N_0B} \right) - 20log10(1-T_{cp}/T_s
 \end{equation}
 Thus to close the link with the composite symbol the $S/N$ must be increased by a factor of $1/(1 - {T_s}/T_{cp})^2$ compared to our ideal modem.  This accounts for the energy allocated to the CP, and the shorter period $T^\prime_s$ of the symbol $D^\prime$.  The squared term suggest SNR is quite sensitive to increasing $T_{cp}$, which is necessary to handle fast fading, high delay spread channels such as MPD. For example FreeDV 700E has $Ts=0.02$, $T_{cp}=0.006$, giving $L_{cp}=-20log10(1-0.006/0.02)=3.1 \si{dB}$.
 
-\subsection{Waveform Improvements}
+\subsection{HF Channel Model}
 
-Try low risk approaches to start with, then iterate.  To simulate performance with voice codec, use PER=0.1, BER=0.01 voice codec threshold for modem tests alone.
+TODO: ref and expression, brief discussion.
+
+\section{Waveform Improvments}
+
+In this section notes on (proposed) waveform improvements are presented.
+
+The general strategy is to propose an innovation, and explore with analysis/maths and Octave simulation. Try low risk approaches to start with, then iterate.  To simulate performance with voice codec, use PER=0.1, BER=0.01 voice codec threshold for modem tests alone.
 
 \subsection{Equalisation}
 
 \begin{enumerate}
-\item Pilot symbols are used to estimate channel.
-\item Phase and amplitude shifts due to the channel impulse response.  For example consider two path model, has time varying complex coeffs and delay.
-\item Consider Two path  model, comprised of two time varying complex coefficients, with bandwidth (-20dB) of $B=1$ Hz (MPP).  The model is considered stationary over one symbol.
-\item We should be able to reconstruct a 1Hz bandwidth signal at 1 Hz sample rate, which suggests a low pilot insertion rate.  The other factor is how channel estimate noise.
-\item Each coefficient $h_n$ is a complex random variable with bandwidth $B$. Consider the channel model applied to steady state symbol (or a time varying PSK signal after ISI has settled). Two terms of bandwidth B add linearly, so by linearity the result also has bandwidth B.  The sum is a random modulation of bandwidth B about on the symbol centre frequency.  The Doppler bandwidth $B$ therefore defines the bandwidth required for equalisation, independent of delay spread. One caveat - if B an appreciable fraction of Rs the DFT orthogonality may break down to some extent as energy falls into adjacent DFT bins.
-\item 700D samples pilots at $1/(N_p*Ts)=6.25 \si{Hz}$, which should be adequate for our target channels.  This is an acceptably low $L_{ps}$ SNR overhead.
-\item Move from block average to 2D interpolator with bandwidth of (say 6Hz).  Simulation, show it can do a better job than block estimator.
-\item Benefit - wide Doppler bandwidth, small pilot overhead, low noise channel estimator
+\item Pilot symbols are used to estimate channel.  We require a 2 Hz bandwidth (fastest fading on MPP) and low noise (in AWGN channels) channel estimates.
+\item Each OFDM carrier experiences phase and amplitude shifts due to the channel impulse response.  For example consider two path simulation model (TODO ref, subsection), which has two time varying complex coefficients and delay.
+\item Consider the two path HF channel model, comprised of two time varying complex coefficients, with bandwidth (-20dB) of $B=1 \si{Hz}$ (MPP).  The model is considered stationary over one symbol.
+\item We should be able to reconstruct a 1 Hz bandwidth signal at 1 Hz sample rate, which suggests a low pilot insertion rate.  Other factors are adequate (in a modem performance sense) estimation in the presence of AWGN channel noise, and the short window of samples (at least fwd in time) that we can use, e.g. 4 samples total.
+\item Each coefficient of the channel $h_n$ is a complex random variable with bandwidth $B$. Consider the channel model applied to steady state symbol (or a time varying PSK signal after ISI has settled). Two terms of bandwidth B add linearly, so by linearity the result also has bandwidth B.  The sum is a random modulation of bandwidth B about the symbol centre frequency.  The Doppler bandwidth $B$ therefore defines the bandwidth required for equalisation, independent of delay spread.
+\item One caveat - if B an appreciable fraction of Rs the DFT orthogonality may break down to some extent as energy falls into adjacent DFT bins.  This could be explored by simulation too (or find a reference).
+\item 700D samples pilots at $1/(N_pTs)=6.25 \si{Hz}$, which should be adequate for our target channels.  This will result in an acceptably low $L_{ps}$ SNR overhead.
+\item 700D currently uses a block average over a 2D array of 12 pilots, this can be interpreted as a filter with all coefficients $c_i=1/12$. We may be able to do better with a different set of coefficients.  Use a simulation to explore.
+\item Benefit - wide Doppler bandwidth, small pilot overhead, low noise channel estimator, one waveform for AWGN through to MPD,
 \end{enumerate}
 
 \subsection{Multipath}
@@ -182,20 +191,24 @@ If we use diversity, I am not sure how much FEC we can also use, as we may run o
 
 \begin{enumerate}
 \item We need a CP long enough to handle MPD (4ms plus guard)
-\item Try longer $T_s$ which will mean less overhead. However this implies lower $R_s$ which may be impacted by frequency spreading effect of Doppler.
+\item Try longer $T_s$ which will mean less overhead. However this implies lower $R_s$ which may be impacted by frequency spreading effect of Doppler.  Caveat (as in equalisation section) is possible issues with Doppler spread and frequency offset tracking as $R_s$ reduces.
 \item Measure implementation loss or EVM against ISI, we might be able to get away with some ISI, it is acceptable to have performance drop off for MPD, but it needs to be gradual rather than breaking.
 \item 700C had just 13ms symbols but dealt with ISI pretty well - this might be worth exploring.
 \end{enumerate}
 
-\section{Unorganised Notes}
+\subsection{Acquisition}
 
-TODO:
+TODO: also include frequency offset estimation and tracking.  Sensitivity of Doppler spread, freq offset errors with reduced $R_s$. 
+
+\section{Further Work}
+
+This section presents topics useful to explore in future.
 
 \begin{itemize}
-\item Can we include PAPR into model? Cn we have different trajectories for QPSK symbols around unit circle that reduce PAPR?  No I don't think that helps when multiple carriers are added together.  ECSSB techniques may be useful.
+\item Can we include PAPR into model? Can we have different trajectories for QPSK symbols around unit circle that reduce PAPR?  No I don't think that helps when multiple carriers are added together.  ECSSB techniques may be useful.
 \item Expression for Fading channels, block error rate, why 2020 is a lemon.
 \item Table of FreeDV waveforms and values, plugged into formula, effect of increasing pilot symbol rate.
-\item Check performance of a few codes against 2dB figure above.
+\item Check performance of a few codes against 2dB figure above.  Include plots.
 \item Where we can gain, diversity, PAPR reduction, reduced overheads for fast fading and ISI (discuss)
 \item Wades MAP techniques (ref).  This has a lot of promise, need an effective way to simulate and establish benefit with a modest amount of work.  Without a rate 0.5 code this would free up a lot of bandwidth to deal with ISI better, e.g. we could have large gaps between symbols.  Or use parallel tone modem to reduce effects of ISI.  A high rate code on top of this may be useful option (if it can converge).   Can we combine MAP with extra bits?  Index optimisation also a simple approach.
 \end{itemize} 
