--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -176,7 +176,22 @@ The general strategy is to propose an innovation, and explore with analysis/math
 \item One caveat - if B an appreciable fraction of Rs the DFT orthogonality may break down to some extent as energy falls into adjacent DFT bins.  This could be explored by simulation too (or find a reference).
 \item 700D samples pilots at $1/(N_pTs)=6.25 \si{Hz}$, which should be adequate for our target channels.  This will result in an acceptably low $L_{ps}$ SNR overhead.
 \item 700D currently uses a block average over a 2D array of 12 pilots, this can be interpreted as a filter with all coefficients $c_i=1/12$. We may be able to do better with a different set of coefficients.  Use a simulation to explore.
-\item Benefit - wide Doppler bandwidth, small pilot overhead, low noise channel estimator, one waveform for AWGN through to MPD,
+\item Benefit - wide Doppler bandwidth, small pilot overhead, low noise channel estimator, one waveform for AWGN through to MPD.
+\end{enumerate}
+
+Take away notes from analysis and simulation (TODO edit and write up properly):
+\begin{enumerate}
+\item filter response is a combination of number of taps and cut off frequency
+\item further work: an IIR filter if the delay could be managed 
+\item if we just interpolate (cutoff = $\pi$) we could handle quite fast fading at high SNR, this might be an acceptable trade off.
+\item We could provide bandwidth switches for Hams to experiment with, or people could try their own filter coefficients.
+\item Curves AWGN, HF theory, HF with perfect phase est (amplitude fading only) as controls, then try different phase estimators
+\item is one sample/modem frame OK?  Or should re resample for each data symbol?
+\item seeing similar HF perf on lin2 (700E and data modes) and mean4 (700D-ish, at least in time).  Mean4 has sluggish freq response, but good filtering. lin2 doesn't filter noise much, but good freq response.  What really matters is HF.
+\item Have sinc interpolator working, with some adjustments to delay and bandwidth.  As bandwidth is wider, it tracks time domain pilot noise better, rather than averaging it, so poor AWGN performance.  lin2 very hard to beat on fading channels (outperforms sinc at current bandwidths), and so simple, due to oversampling.  Thickness of arms is a good indication of fading perf.   lin2 works above 2 Hz.
+\item "bandwidth" interpretation of mean4 also shows how it is impacted by fast fading.
+\item We are showing reasonable HF perf with Np=8, Ts=0.02, 1dB off hf theory for 1Hz, 2dB for 2Hz Doppler - in a single mode.  So this is progress towards our single mode goal, with 0.4dB saving in $L_p$ and bandwidth savings using $N_p=8$. It would be nice to improve slow fading/AWGN perf, and get closer to ideal HF.
+\item idea: try lin2 with adajacent carriers, to see if HF gets closer to ideal and we improve AWGN.  Accidental plotting of time domain adjacent carrier is instructive.  Phase shift of 2nd phase term of adjacent carriers is symmetrical which might help.  It is proportonal to delay spread so we may see more degredation.  lin2 AWGN now 0.5dB, but not sure if fading perf better, still around 1dB 
 \end{enumerate}
 
 \subsection{Multipath}
@@ -198,7 +213,7 @@ If we use diversity, I am not sure how much FEC we can also use, as we may run o
 
 \subsection{Acquisition}
 
-TODO: also include frequency offset estimation and tracking.  Sensitivity of Doppler spread, freq offset errors with reduced $R_s$. 
+TODO: also include frequency offset estimation and tracking.  Sensitivity of Doppler spread, freq offset errors with reduced $R_s$. Can we use othogonality property to track freq offset, e.g. iterative adjustments of offset to peak OFDM carriers?
 
 \section{Further Work}
 
@@ -208,7 +223,6 @@ This section presents topics useful to explore in future.
 \item Can we include PAPR into model? Can we have different trajectories for QPSK symbols around unit circle that reduce PAPR?  No I don't think that helps when multiple carriers are added together.  ECSSB techniques may be useful.
 \item Expression for Fading channels, block error rate, why 2020 is a lemon.
 \item Table of FreeDV waveforms and values, plugged into formula, effect of increasing pilot symbol rate.
-\item Check performance of a few codes against 2dB figure above.  Include plots.
 \item Where we can gain, diversity, PAPR reduction, reduced overheads for fast fading and ISI (discuss)
 \item Wades MAP techniques (ref).  This has a lot of promise, need an effective way to simulate and establish benefit with a modest amount of work.  Without a rate 0.5 code this would free up a lot of bandwidth to deal with ISI better, e.g. we could have large gaps between symbols.  Or use parallel tone modem to reduce effects of ISI.  A high rate code on top of this may be useful option (if it can converge).   Can we combine MAP with extra bits?  Index optimisation also a simple approach.
 \end{itemize} 
