--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -3,3 +3,7 @@
   title={{FreeDV-020 WP4000 Low SNR Mode}},
   author={Rowe, David},
 }
+@misc{itu1487,
+  title={{ITU-R F.1487: Testing of HF modems with bandwidths of up to about 12 kHz using ionospheric channel simulators}},
+  year={2000}
+}
