--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -143,7 +143,7 @@ where the symbol rate $R_s=1/T_s$.  Expressing $S/N$ (\ref{eq:snr}) in terms of 
 \begin{split}
 \frac{S}{N} &= \frac{E_sR_s}{N_0B} \\
 \frac{S}{N}^\prime &= \frac{E_sR^\prime_s}{N_0B} \\
-                   &= \frac{E_bR_sN_s}{N_0B(N_p-1)} \\
+                   &= \frac{E_sR_sN_s}{N_0B(N_p-1)} \\
 \frac{S^\prime/N}{S/N} &= \frac{N_p}{N_p-1}
 \end{split}
 \end{equation}
@@ -151,11 +151,11 @@ Thus when we insert pilots, the threshold $S/N$ increases by a factor of $N_p/(N
 \begin{equation}
 \begin{split}
 10log_{10}\left(\frac{S^\prime}{N}\right) &= 10log_{10}\left(\frac{S}{N}\right) + 10log_{10}\left(\frac{N_s}{N_s-1}\right) \\
-SNR^\prime &= SNR + 10log_{10}\left(\frac{N_s}{N_s-1}\right) \\
+SNR^\prime &= SNR + 10log_{10}\left(\frac{N_p}{N_p-1}\right) \\
 SNR^\prime &= SNR + L_p  \quad [\si{dB}]
 \end{split}
 \end{equation}
-where $L_p$ can be considered the pilot symbol \emph{loss} - the SNR degradation from the ideal performance (\ref{eq:snr}) due to the insertion of pilot symbols. For example FreeDV 700D uses a pilot insertion rate of $N_s=8$ results in $L_p=10log_{10}(8/7)=0.58 \, \si{dB}$, thus we need 0.58 dB more SNR to acheive the threshold SNR for the voice link.  To maintain $Rs=700$ data symbols/second over the channel, we require $R^\prime_s = (700)8/7 =800$ symbols/second which introduces a bandwidth overhead.
+where $L_p$ can be considered the pilot symbol \emph{loss} - the SNR degradation from the ideal performance (\ref{eq:snr}) due to the insertion of pilot symbols. For example FreeDV 700D uses a pilot insertion rate of $N_s=8$ results in $L_p=10log_{10}(8/7)=0.58 \, \si{dB}$, thus we need 0.58 dB more SNR to acheive the threshold SNR for the voice link.  To maintain $Rs=700$ data symbols/second over the channel, we require $R^\prime_s = (700)8/7 =800$ symbols/second which introduces a 100 Hz bandwidth overhead.
 
 \subsection{Cyclic Prefix Overhead}
 
@@ -198,17 +198,20 @@ R^\prime_s &= \frac{R_s}{1 - T_{cp}/T_s}
 \end{equation}
 It can be observed that $R^\prime_s > R_s$, to account for the portion of the composite symbol allocated to the CP.  For example with $R_s=700$, $T_s=0.02$, $T_{cp}=0.002$, $R^\prime_s=700/(1-0.002/0.02)=777.78$ symbols/second.  Thus additional bandwidth is required to send the composite symbol including the cyclic prefix.
 
-For the composite signal, the transmitter power $S$ is spread between the CP and $D^\prime$: 
+The increase in symbol rate does not directly affect the performance if $E_b/N_0$ remains the same. For example if $Rs^\prime=2R_s$ we could send the symbol across the channel in $T_s/2$ seconds at power $2S$, followed by $T_s/2$ seconds of silence.  The energy per bit $E_b$ and average power $S$ would remain the same.
+
+However for the composite symbol, the transmitter power $S^\prime$ is spread between the CP and $D^\prime$: 
 \begin{equation}
-S = \frac{T_{cp}}{T_s}S + \left(1 - \frac{T_{cp}}{T_s} \right)S
+S^\prime = \frac{T_{cp}}{T_s}S^\prime + \left(1 - \frac{T_{cp}}{T_s} \right)S^\prime
 \end{equation}
-Only the RH term contributes to the demodulation of $D^\prime$:
+Only the RHS contributes to the demodulation of $D^\prime$.  We require the RHS to have the same power as (\ref{eq:snr}) to maintain the same $E_b$:
 \begin{equation}
 \begin{split}
-\frac{S(1-T_{cp}/T_s)}{N} &= \frac{E_sR^\prime_s}{N_0B} \\
-\frac{S}{N} &= \frac{E_sR^\prime_s}{N_0B}\frac{1}{(1-T_{cp}/T_s)}\\
-SNR         &= 10log_{10} \left( \frac{E_sR^\prime_s}{N_0B} \right) - 10log_{10}(1-T_{cp}/T_s) \\
-            &= 10log_{10} \left( \frac{E_sR^\prime_s}{N_0B} \right) + L_{cp} \quad [\si{dB}]
+S           &= \left(1 - \frac{T_{cp}}{T_s} \right)S^\prime \\
+\frac{S}{N} &= \frac{S^\prime}{N}\left(1 - \frac{T_{cp}}{T_s}\right) \\
+SNR^\prime  &= SNR - 10log_{10}(1-T_{cp}/T_s) \\
+            &= SNR + L_{cp} \quad [\si{dB}] \\
+     L_{cp} &= -10log_{10}(1-T_{cp}/T_s)    
 \end{split}
 \end{equation}
 Thus to close the link with the composite symbol the $S/N$ must be increased by a factor of $1/(1 - {T_s}/T_{cp})$ compared to our ideal modem, to account for the energy allocated to the CP.  For example FreeDV 700E has $T_s=0.02$, $T_{cp}=0.006$, giving $L_{cp}=-10log10(1-0.006/0.02)=1.55 \si{dB}$.
@@ -277,6 +280,7 @@ Take away notes from analysis and simulation (TODO edit and write up properly):
 
 Combining pilots from adjacent carriers is used in FreeDV 700D to reduce estimation noise.  Examining (\ref{eq:hf_model}) we can see some symmetry in the RH term in the phase between carrier $n-1$ and carrier $n+1$ which supports averaging over adjacent carriers to estimate $H_n$, especially when the term $2 \pi R_s d$ is small.  A more robust approach is to perform a least squares fit of three equations with $G_1$ and $G_2$ as the two unknowns, and $H_{-1}, H_0, H_1$ as the three pilot samples centred around the current carrier:
 \begin{equation}
+\label{eq:combine_freq}
 \begin{split}
 G_1 + G_2 e^{j 2 \pi R_sd} &= H_{-1} \\
 G_1 + G_2 &= H_{0} \\
@@ -334,6 +338,7 @@ This section presents topics useful to explore in future.
 \item Table of FreeDV waveforms and values, plugged into formula, effect of increasing pilot symbol rate.
 \item Where we can gain, diversity, PAPR reduction, reduced overheads for fast fading and ISI (discuss)
 \item Wades MAP techniques (ref).  This has a lot of promise, need an effective way to simulate and establish benefit with a modest amount of work.  Without a rate 0.5 code this would free up a lot of bandwidth to deal with ISI better, e.g. we could have large gaps between symbols.  Or use parallel tone modem to reduce effects of ISI.  A high rate code on top of this may be useful option (if it can converge).   Can we combine MAP with extra bits?  Index optimisation also a simple approach.
+\item Extending (\ref{eq:combine_freq}) to more carriers, it is essentially estimating the entire channel.  Literature search, I'm sure this is nothing new.  Determine if (\ref{eq:combine_freq}) is a reasonable approximation for real HF channels - we have derived it from a simulation model.
 \end{itemize} 
 
 \nocite{*}
